Not released yet

Additions:
- Ability specify where piped arguments are placed using `_`.
    - `x |> foo(y, _) == foo(y, x)`
- Alternative syntax for `case #default ...`. You can now just write `case _ ...`.
- Alternative syntax for binding documentation using `///`.
- **Experimental** compiler extensions feature, currently used to create procedural macros.
- `core.misc.any_deep_copy`

Removals:
- Deprecated the use of `#default` in case statements. Use `_` instead.

Changes:
There are several *breaking* changes in this release related to core library APIs.
- `Iterator.next` now returns `? T` instead of `(T, bool)`
- `io.Stream` uses `Result(T, Error)` for return types instead of `(Error, T)`

There are also several non-breaking changes.
- The internal memory layout is different. See pull request #133 for details.

Bugfixes:

Contributors:



Release 0.1.10
---------------
30th March 2024

Additions:
- JavaScript interop
    - `core.js` package for JS FFI.
    - `#js` directive to build a JavaScript file during compilation.
- Implicit injections
    - `#inject` is no longer required in some cases
- Named return values
- Official builds for Linux AARCH64
- `Slice` and `Array` structures for placing methods on slices and dynamic arrays.
- Range type improvements
    - `range64` type
    - `..=` operator that is a range, with an inclusive upper end.
- New alternate error format that may become the default in the future.
    - Use `--error-format v2` or set environment variable `ONYX_ERROR_FORMAT` to be `v2`.
- Auto-disposing locals (experimental)
    - `use x := ...`
- Core library functions
    - New process spawning API with builder pattern (`os.command`)
    - `sync.MutexGuard`
    - `sync.Channel`
    - `hash.sha1`
    - `net.dial`
    - `net.resolve`
    - integer constants `i8.MIN`, `i64.MAX`, etc.

Removals:

Changes:
- Revamped CLI
    - Shorthand commands (r for run, b for build, etc.)
    - Improved appearance
    - Better help pages